--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "nylas": "^7.7.0",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
     "react-aria-components": "^1.4.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
